# project_manager

./: .env.example  .gitignore  Dockerfile  README.md  app.py  postgre.sql  pyproject.toml
controllers/: __init__.py  auth.py  author.py  base_controller.py  detail.py  link.py  project.py  user.py
db/: test.db
middlewares/: __init__.py
models/: __init__.py  connection.py
routes/: __init__.py  api.py  auth.py  author.py  detail.py  link.py  project.py  user.py  web.py
serializers/: __init__.py
static/: index.html  package-lock.json  package.json
static/src/: App.vue  api.js
static/src/assets/: base.css  main.css
static/src/components/: CardProject.vue  ConfirmOperation.vue  Detail.vue  Footer.vue  Header.vue  ManipulateProject.vue  OnlyUser.vue
static/src/composable/: index.js
static/src/router/: index.js
static/src/stores/: processing.js  processingrequest.js  user.js
static/src/views/: HomeView.vue  LoginView.vue  ProjectView.vue  ProjectsView.vue  SignupView.vue  invite.vue
tests/: __main__.py
utils/: __init__.py  auth.py
