[tool.poetry]
name = "gestor de projetos"
version = "1.0.0"
description = "app web para gerências seus projetos"
authors = ["Albino Ndjonale <albinondjonale1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.114.0"
sqlalchemy = "^2.0.34"
psycopg2 = "^2.9.9"
pymongo = {version = ">=4.0", extras = ["srv"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
